[package]
name = "injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
apk = "0.4.0"
clap = { version = "4.5.4", features = ["derive", "color"] }
console = "0.15.8"
human_bytes = { version = "0.4.3", default-features = false }
indicatif = "0.17.8"
inquire = { version = "0.7.5", default-features = false, features = ["console", "macros", "one-liners"] }

object-rewrite = "0.1.1"
thiserror = "1.0.59"
ureq = "2.9.6"
zip = { version = "1.1.1", default-features = false, features = ["deflate", "deflate-miniz", "constant_time_eq"] }
 [patch.crates-io]
object-rewrite = {git="https://github.com/mcbegamerxx954/object"}
